add wordpress menu

--- a/app/public/wp-content/themes/bikcraft/style.css
+++ b/app/public/wp-content/themes/bikcraft/style.css
@@ -150,7 +150,7 @@ img {
   color: #fff;
 }
 
-.header_menu ul li a.menu_ativo {
+.header_menu ul li.current_page_item a {
   color: #fff;
 }
 
@@ -558,7 +558,7 @@ img {
     border-color: #fff;
   }
 
-  .header_menu ul li a.menu_ativo {
+  .current_page_item {
     border-color: #fff;
   }
 
